--- a/app/views/skaters/new.html.erb
+++ b/app/views/skaters/new.html.erb
@@ -4,7 +4,7 @@
 			<%= f.text_field :name, :placeholder => 'Name', class: 'form-control input-correction' %><br><br>
 			<%= f.email_field :email, :placeholder => 'Email', class: 'form-control input-correction' %><br><br>
 			<%= f.password_field :password, :placeholder => 'Password', class: 'form-control input-correction' %><br><br><br>
-			<%= f.submit 'Sign up', class: 'navigation-elements' %>
+			<%= f.submit 'Sign up', class: 'action-elements' %>
 		<% end %>
 	<!--</div>
 </div>-->
