--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -5,5 +5,5 @@
 	<%= f.text_field :latitude, :value => @latitude , :placeholder => 'Latitude', :readonly => true, class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :longitude, :value => @longitude , :placeholder => 'Longitude', :readonly => true, class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :address, :value => @addressCorrection , :placeholder => 'Address', :readonly => true, class: 'form-control input-correction' %><br><br><br>
-	<%= f.submit 'ADD SPOT', class: 'navigation-elements' %>
+	<%= f.submit 'ADD SPOT', class: 'action-elements' %>
 <% end %>
