--- a/app/views/jams/new.html.erb
+++ b/app/views/jams/new.html.erb
@@ -4,6 +4,6 @@
 	<%= f.text_field :spot_id, class: 'form-control input-correction', :placeholder => 'Spot' %><br><br>
 	<%= f.date_field :date, class: 'form-control input-correction', :placeholder => 'Date' %><br><br>
 	<%= f.time_select :time, class: 'form-control input-correction', :placeholder => 'Time' %><br><br>
-	<%= f.text_field :info, class: 'form-control input-correction', :placeholder => 'Info' %><br><br><br>
-	<%= f.submit 'ADD JAM', class: 'navigation-elements' %>
-<% end %>
+	<%= f.text_field :info, class: 'form-control input-correction', :placeholder => 'Info' %><br><br><br><br>
+	<%= f.submit 'ADD MEETING', class: 'action-elements' %>
+<% end %><br>
