--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -3,7 +3,7 @@
 		<div id="map-container"></div>
 	</div>
 </div>
-<br>
-<button class="add-spot-here btn btn-primary" data-toggle="modal" data-target="#myModal5">ADD SPOT HERE</button>
-<button class="nearest-spot btn btn-primary">NEAREST SPOT</button>
-<button class="random-spot btn btn-primary">RANDOM SPOT</button>
+<br><br>
+<button class="add-spot-here action-elements" data-toggle="modal" data-target="#myModal5">ADD SPOT HERE<br><span class="glyphicon-correction glyphicon glyphicon-map-marker"></span></button>
+<button class="nearest-spot action-elements">NEAREST SPOT<br><span class="glyphicon-correction glyphicon glyphicon-resize-small"></span></button>
+<button class="random-spot action-elements">RANDOM SPOT<br><span class="glyphicon-correction glyphicon glyphicon-random"></span></button><br>
