--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -3,15 +3,23 @@
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#pending" aria-controls="pending" role="tab" data-toggle="tab">Pending <span class="badge"><%= pending_challenges %></span></a></li>
     <li role="presentation"><a href="#completed" aria-controls="completed" role="tab" data-toggle="tab">Completed <span class="badge"><%= completed_challenges %></span></a></li>
-    <li role="presentation"><a href="#to-check" aria-controls="to-check" role="tab" data-toggle="tab">Sent</a></li>
+    <li role="presentation"><a href="#to-check" aria-controls="to-check" role="tab" data-toggle="tab">Friends tricks</a></li>
   </ul>
   <!-- Tab panes -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane fade in active" id="pending"><br>		
 		<% @pending_challenges.each do |pending_challenge| %>
-				<span class="label label-success default-font-size"><%= pending_challenge.challenge %></span>&nbsp;&nbsp;Challenged by <%= Skater.find(pending_challenge.challenger_id).name %>&nbsp;&nbsp;
-				<div data-toggle="modal" data-target="#myModal3" class="action-elements" data-skater-id="<%= session[:id] %>" data-spot-id="<%= pending_challenge.challenge_spot %>" data-challenge-id="<%= pending_challenge.id %>">TRY</div><br><br>
-			
+			<div class="challenges-completed">
+				<span class="label label-success default-font-size"><%= pending_challenge.challenge %></span>
+			</div>
+			<div class="challenges-completed challenger">
+				Challenged by <i><%= Skater.find(pending_challenge.challenger_id).name %></i>
+			</div>
+			<div class="challenges-completed">
+				<div data-toggle="modal" data-target="#myModal3" class="action-elements" data-skater-id="<%= session[:id] %>" data-spot-id="<%= pending_challenge.challenge_spot %>" data-challenge-id="<%= pending_challenge.id %>" style="display:inline;">TRY</div>
+			</div>
+			<div class="clear-floats"></div>
+			<br><br>
 		<% end %>		
     </div>
     <div role="tabpanel" class="tab-pane fade" id="completed"><br>    	
